--- a/app/views/party/view_all.erb
+++ b/app/views/party/view_all.erb
@@ -5,7 +5,7 @@
     </div>
   </div>
   <article>
-    <div class="col-sm-12">
+    <div class="col-sm-12  mb-4">
       <h4 class="text-center">Parties you are hosting:</h4>
     </div>
     <%if @user_hosted.empty?%>
@@ -42,7 +42,7 @@
     <%end%>
   </article>
   <article>
-    <div class="col-sm-12">
+    <div class="col-sm-12 mb-4">
       <h4 class="text-center">Parties you are invited to:</h4>
     </div>
     <%if @user_invited.empty?%>
