--- a/app/views/theme/list.erb
+++ b/app/views/theme/list.erb
@@ -1,28 +1,43 @@
-<main>
-  <h2>Theme Admin Page</h2>
+<main class="container">
+  <div class="row mb-3">
+    <div class="col-sm-12">
+      <h3 class="text-center">Theme Admin Page</h3>
+    </div>
+  </div>
 
-  <form action="/admin/theme" method = 'post'>
-    <fieldset>
-      <legend>Add Theme:</legend>
-      <label for="new_name">New Name:</label><br>
-      <input type="text" id="new_name" name="new_name" title="Enter Theme name here" required><br>
-      <input type="submit" value="Create theme">
-    </fieldset>
-  </form>
+  <div class="row mb-3">
+    <div class="col-sm-12">
+      <form action="/admin/theme" method='post' class="was-validated">
+        <fieldset class="border px-4 py-2">
+          <legend class="w-auto">Add Theme:</legend>
+          <div class="form-group">
+            <label for="new_name">New Theme Name:</label>
+            <input type="text" class="form-control" id="new_name" name="new_name" title="Enter Theme name here" required>
+          </div>
+          <input type="submit" value="Create theme">
+        </fieldset>
+      </form>
+    </div>
+  </div>
 
   <h3>Theme List Page</h3>
-  <table>
-    <tr>
-      <th>Name</th>
-      <th>Status</th>
-      <th>Modify/Delete</th>
-    </tr>
-    <% Theme.all.each do |theme| %>
+  <table class="table table-striped table-hover">
+    <thead>
       <tr>
-        <td><%=theme.name%></td>
-        <td><%=theme.active ? 'Active' : 'Inactive'%></td>
-        <td><a href="/admin/theme/<%=theme.id%>"> Edit </a></td>
+        <th>Name</th>
+        <th>Status</th>
+        <th>Edit</th>
       </tr>
-    <% end %>
+    </thead>
+    <tbody>
+    <% Theme.all.each do |theme| %>
+        <%color=theme.active ? 'text-body' : 'text-muted'%>
+        <tr class="<%=color%>">
+          <td><%=theme.name%></td>
+          <td><%=theme.active ? 'Active' : 'Inactive'%></td>
+          <td><a href="/admin/theme/<%=theme.id%>"><i class="material-icons">build</i></a></td>
+        </tr>
+      <%end%>
+    </tbody>
   </table>
 </main>
