minor update to auth views

--- a/app/views/auth/login_passwordless.erb
+++ b/app/views/auth/login_passwordless.erb
@@ -10,11 +10,8 @@
   <div class='row mb-3'>
     <div class="col-sm-12">
       <form action="/pre_auth/login/passwordless" method="POST" class="was-validated">
-        <div class="form-group">
-          <label for="email">Email:</label>
-          <input type="email" id="email" name="email" class="form-control" placeholder="user@example.com" required>
-          <div class="invalid-feedback">Please enter valid Email.</div>
-        </div>
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="email" class="form-control mb-3" placeholder="user@example.com" required>
         <input type="submit" value="Submit">
       </form>
     </div>
