--- a/app/views/auth/login.erb
+++ b/app/views/auth/login.erb
@@ -5,12 +5,9 @@
   <div class='row mb-3'>
     <div class="col-sm-12">
       <form action="/pre_auth/login" method="POST" class="was-validated">
-        <div class="form-group">
-          <label for="email">Email:</label>
-          <input type="email" id="email" name="email" class="form-control" placeholder="user@example.com" required>
-          <div class="invalid-feedback">Please enter valid Email.</div>
-        </div>
-        <div class="form-group">
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="email" class="form-control mb-3" placeholder="user@example.com" required>
+        <div class="form-group mb-3">
           <label for="password">Password:</label><br>
           <input type="password" id="password" name="password" minlength="8" class="form-control" required>
           <div class="invalid-feedback">Passwords must be a min  of 8 characters.</div>
