start users views and finish password_reset

--- a/app/views/user/password_reset.erb
+++ b/app/views/user/password_reset.erb
@@ -1,11 +1,23 @@
-<h2>Reset Your Password</h2>
+<main class="container">
+  <div class='row mb-3'>
+    <div class="col-sm-12"><h3 class="display-3 text-center">Reset Your Password</h3></div>
+  </div>
 
-<p>Enter your accounts email address and we will send you a password reset link.</p>
+  <div class='row mb-3'>
+    <div class="col-sm-12"><p class="text-center">Enter your accounts email address and we will send you a password reset link.</p></div>
+  </div>
 
-<form action="/user/forgot_password" method="POST">
-  <label for="email">Email:</label><br>
-  <input type="email" id="email" name="email" required><br>
-  <input type="submit" value="Send password reset email">
-</form> 
-<br>
- <a href="/pre_auth/login">Return to Login.</a>
+  <div class='row mb-3'>
+    <div class="col-sm-12">
+      <form action="/user/forgot_password" method="POST" class="was-validated">
+        <label for="email">Email:</label><br>
+        <input type="email" id="email" name="email" class="form-control mb-3" placeholder="user@example.com" required>
+        <input type="submit" value="Send password reset email">
+      </form>
+    </div>
+  </div>
+
+  <div class='row mb-3'>
+    <div class="col-sm-12"><a href="/pre_auth/login">Return to Login.</a></div>
+  </div>
+</main>
