--- a/app/views/user/reset_password.erb
+++ b/app/views/user/reset_password.erb
@@ -1,10 +1,12 @@
-<h2>Reset password for <%=@user.email%></h2>
+<main class="container">
+  <h2>Reset password for <%=@user.email%></h2>
 
-<form action="/user/reset_password" method="POST">
-  <input type="hidden" name="_method" value="patch">
-  <label for="new_password">New Password:</label><br>
-  <input type="password" id="new_password" name="new_password" minlength="8" required><br>
-  <label for="new_confirm_password">Confirm Password:</label><br>
-  <input type="password" id="new_confirm_password" name="new_confirm_password" minlength="8" required><br>
-  <input type="submit" value="Submit">
-</form> 
+  <form action="/user/reset_password" method="POST">
+    <input type="hidden" name="_method" value="patch">
+    <label for="new_password">New Password:</label><br>
+    <input type="password" id="new_password" name="new_password" minlength="8" required><br>
+    <label for="new_confirm_password">Confirm Password:</label><br>
+    <input type="password" id="new_confirm_password" name="new_confirm_password" minlength="8" required><br>
+    <input type="submit" value="Submit">
+  </form>
+</main>
