--- a/app/views/user/signup.erb
+++ b/app/views/user/signup.erb
@@ -1,29 +1,31 @@
-<h2>Welcome to the Party!</h2>
+<main class="container">
+  <h2>Welcome to the Party!</h2>
 
-<form action="/user/signup" method="POST">
-  <label for="name">Name:</label><br>
-  <input type="text" id="name" name="name" pattern="[A-Za-z-0-9]+\s[A-Za-z-'0-9]+" placeholder="John Doe" title="Firstname Lastname" required><br>
-  
-  <label for="email">Email:</label><br>
-  <input type="email" id="email" name="email" required><br>
+  <form action="/user/signup" method="POST">
+    <label for="name">Name:</label><br>
+    <input type="text" id="name" name="name" pattern="[A-Za-z-0-9]+\s[A-Za-z-'0-9]+" placeholder="John Doe" title="Firstname Lastname" required><br>
 
-  <label for="email_confirmation">Email Confirmation:</label><br>
-  <input type="email" id="email_confirmation" name="email_confirmation" required><br>
+    <label for="email">Email:</label><br>
+    <input type="email" id="email" name="email" required><br>
 
-  <label for="password">Password:</label><br>
-  <input type="password" id="password" name="password" minlength="8" required><br>
-  
-  <label for="password_Confirmation">Password Confirmation:</label><br>
-  <input type="password" id="password_confirmation" name="password_confirmation" minlength="8" required><br>
+    <label for="email_confirmation">Email Confirmation:</label><br>
+    <input type="email" id="email_confirmation" name="email_confirmation" required><br>
 
-  <p>Allow Passwordless login:</p>
-  <input type="radio" id="passwordless_yes" name="passwordless" value="yes" required>
-  <label for="passwordless_yes">Yes</label><br>
-  <input type="radio" id="passwordless_no" name="passwordless" value="no" required>
-  <label for="passwordless_no">No</label><br>
+    <label for="password">Password:</label><br>
+    <input type="password" id="password" name="password" minlength="8" required><br>
 
-  <br>
+    <label for="password_Confirmation">Password Confirmation:</label><br>
+    <input type="password" id="password_confirmation" name="password_confirmation" minlength="8" required><br>
 
-  <input type="submit" value="Submit"> 
-  <input type="reset" value="Clear">
-</form>
+    <p>Allow Passwordless login:</p>
+    <input type="radio" id="passwordless_yes" name="passwordless" value="yes" required>
+    <label for="passwordless_yes">Yes</label><br>
+    <input type="radio" id="passwordless_no" name="passwordless" value="no" required>
+    <label for="passwordless_no">No</label><br>
+
+    <br>
+
+    <input type="submit" value="Submit">
+    <input type="reset" value="Clear">
+  </form>
+</main>
