update views and updated user profile.erb

--- a/app/views/auth/login.erb
+++ b/app/views/auth/login.erb
@@ -24,10 +24,10 @@
       <p class="text-right"><a href="/user/forgot_password">Forgot my Password</a></p>
     </div>
   </div>
-  <div class='row mb-1'>
+  <div class='row mb-2'>
     <div class="col-sm-12"><h4 class="display-4 text-center">New to Party Planner?</h4></div>
   </div>
   <div class='row mb-3'>
-    <div class="col-sm-12"><p class='text-center'><a href="/pre_auth/user/signup">Signup Today!</a></p></div>
+    <div class="col-sm-12"><h5 class='text-center'><a href="/pre_auth/user/signup">Signup Today!</a></h5></div>
   </div>
 </main>
