--- a/app/views/theme/edit.erb
+++ b/app/views/theme/edit.erb
@@ -39,7 +39,7 @@
           <p>Select Below to change:</p>
           <div class="custom-control custom-radio mb-1">
             <input class="custom-control-input" type="radio" id="active_yes" name="active" value="yes" required>
-            <label class="custom-control-label"for="active_yes">Active</label><br>
+            <label class="custom-control-label" for="active_yes">Active</label>
           </div>
           <div class="custom-control custom-radio mb-3">
             <input type="radio" class="custom-control-input" id="active_no" name="active" value="no" required>
