update view user reset_password

--- a/app/views/user/reset_password.erb
+++ b/app/views/user/reset_password.erb
@@ -1,12 +1,18 @@
 <main class="container">
-  <h2>Reset password for <%=@user.email%></h2>
+  <div class='row mb-3'>
+    <div class="col-sm-12"><h4 class="display-4 text-center">Reset password for: <span class="text-secondary"><%=@user.email%></span></h4></div>
+  </div>
 
-  <form action="/user/reset_password" method="POST">
-    <input type="hidden" name="_method" value="patch">
-    <label for="new_password">New Password:</label><br>
-    <input type="password" id="new_password" name="new_password" minlength="8" required><br>
-    <label for="new_confirm_password">Confirm Password:</label><br>
-    <input type="password" id="new_confirm_password" name="new_confirm_password" minlength="8" required><br>
-    <input type="submit" value="Submit">
-  </form>
+  <div class="row mb-3">
+    <div class="col-sm-12">
+      <form action="/user/reset_password" method="POST" class="was-validated">
+        <input type="hidden" name="_method" value="patch">
+        <label for="new_password">New Password:</label>
+        <input class="form-control my-3" type="password" id="new_password" name="new_password" minlength="8" required>
+        <label for="new_confirm_password">Confirm Password:</label>
+        <input class="form-control my-3" type="password" id="new_confirm_password" name="new_confirm_password" minlength="8" required>
+        <input type="submit" value="Submit">
+      </form>
+    </div>
+  </div>
 </main>
