--- a/app/views/venue/view.erb
+++ b/app/views/venue/view.erb
@@ -1,4 +1,4 @@
-<main>
+<main class="container">
   <h2>Best places to party!</h2>
   <% Venue.all.each do |venue| %>
     <% next unless venue.active  %>
