update list and view for venue

--- a/app/views/venue/list.erb
+++ b/app/views/venue/list.erb
@@ -5,7 +5,7 @@
     </div>
   </div>
   <div class="row mb-3">
-    <div class="col-sm-12"><a class="btn btn-primary btn-block text-body" href='/admin/venue/new'> Create New Venue </a></div>
+    <div class="col-sm-12"><a class="btn btn-primary btn-block text-body" href='/admin/venue/new'><i class="material-icons">add</i> Create New Venue </a></div>
   </div>
   <hr>
   <div class="row mb-3">
