--- a/app/views/user/profile.erb
+++ b/app/views/user/profile.erb
@@ -53,7 +53,7 @@
             <label class="custom-control-label" for="passwordless_no">No</label>
           </div>
           <label class="mb-3" for="current_password">Current Password:</label>
-          <input class="form-control" type="password" id="current_password" name="current_password" minlength="8" required>
+          <input class="form-control mb-3" type="password" id="current_password" name="current_password" minlength="8" required>
           <input type="submit" value="Submit">
           <input type="reset" value="Clear">
         </fieldset>
