--- a/app/views/auth/login.erb
+++ b/app/views/auth/login.erb
@@ -1,18 +1,33 @@
-<main>
-  <h2>Login into Party Planner</h2>
-
-  <div>
-    <a href="/pre_auth/user/signup">Signup to Join the Party!</a>
+<main class="container">
+  <div class='row mb-3'>
+    <div class="col-sm-12"><h3 class="display-3 text-center">Login into Party Planner</h3></div>
   </div>
-  <br>
-
-  <form action="/pre_auth/login" method="POST">
-    <label for="email">Email:</label><br>
-    <input type="email" id="email" name="email" required><br>
-    <label for="password">Password:</label><br>
-    <input type="password" id="password" name="password" minlength="8" required><br>
-    <input type="submit" value="Submit">
-  </form> 
-  <a href="/user/forgot_password">Forgot my Password</a>
-  <a href="/pre_auth/login/passwordless">Passwordless Login</a>
+  <div class='row mb-3'>
+    <div class="col-sm-12">
+      <form action="/pre_auth/login" method="POST" class="was-validated">
+        <label for="email">Email:</label>
+        <input type="email" id="email" name="email" class="form-control mb-3" placeholder="user@example.com" required>
+        <div class="form-group mb-3">
+          <label for="password">Password:</label><br>
+          <input type="password" id="password" name="password" minlength="8" class="form-control" required>
+          <div class="invalid-feedback">Passwords must be a min  of 8 characters.</div>
+        </div>
+        <input type="submit" value="Submit">
+      </form>
+    </div>
+  </div>
+  <div class='row mb-3'>
+    <div class="col-sm-6">
+      <p class="text-left" ><a href="/pre_auth/login/passwordless">Passwordless Login</a></p>
+    </div>
+    <div class="col-sm-6">
+      <p class="text-right"><a href="/user/forgot_password">Forgot my Password</a></p>
+    </div>
+  </div>
+  <div class='row mb-2'>
+    <div class="col-sm-12"><h4 class="display-4 text-center">New to Party Planner?</h4></div>
+  </div>
+  <div class='row mb-3'>
+    <div class="col-sm-12"><h5 class='text-center'><a href="/pre_auth/user/signup">Signup Today!</a></h5></div>
+  </div>
 </main>
