--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -9,60 +9,65 @@
     <meta name="description" content="A Sinatra demo project created for Flatiron bootcamp">
     <meta name="keywords" content="flatIron, party planner, party, demo, sintra">
     <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
-    <link rel="stylesheet" href="/stylesheets/normalize.css" >
-    <link rel="stylesheet" href="/stylesheets/layout_style.css" >
+    <%# Bootstrap items start%>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+    <%# Bootstrap items end%>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   </head>
   <body>
-    <header>
-      <h1>Party Planning, inc</h2>
-      <p>Best Place to Schedule your Party!</p>
-    </header>
-    <nav class='flex-container'>
-        <div class="dropdown">
-          <div class='dropdown-top'><p><a href="/">Home</a></p></div>
-        </div>
-        <%if session['user_id']%>
-          <div class="dropdown">
-            <div class='dropdown-top'><p>Parties/Location</p></div>
-            <div class="dropdown-content">
-              <div><a href="/post_auth/party">Party List</a></div>
-              <div><a href="/post_auth/party/new">New Parties</a></div>
-              <div><a href="/venue">Venue Lists</a></div>
+    <div class="container-fluid">
+      <div class=row>
+        <header class="col-sm-12 jumbotron text-center m mb-0 pb-0">
+          <h1 class='display-1'>Party Planning. Inc</h1>
+          <h3 class="p-3">Best Place to Schedule your Party!</h3>
+          <noscript><p><strong>Warning:</strong> Site functionality is reduced without Javascript enabled.</p></noscript>
+        </header>
+      </div>
+      <% unless flash.empty? %>
+        <% flash.each do |key, message| %>
+          <div class=row>
+            <div class="col-sm-12 text-center alert <%=key%> alert-dismissible fade show mb-0">
+              <button type="button" class="close" data-dismiss="alert">&times;</button>
+              <%= message %>
             </div>
           </div>
-        <% end %>
-        <% if session['user_id'] && session['admin'] != 'yes' %>
-          <div class="dropdown"> <%# User %>
-            <div class='dropdown-top'><p><a href="/post_auth/user/me">Profile Settings</a></p></div>
-          </div>
-        <% elsif session['user_id'] && session['admin'] == 'yes' %>
-          <div class="dropdown"> <%# Admin %>
-            <div class='dropdown-top'><p>Admin/ Profile</p></div>
-            <div class="dropdown-content">
-              <div><a href="/post_auth/user/me">Profile Setting</a></div>
-              <div><a href="/admin/venue">Admin Venues</a></div>
-              <div><a href="/admin/theme">Admin Themes</a></div>
-            </div>
-          </div>
-        <% end %>
-        <div class="dropdown">
-          <% login_link = session['user_id'] ? '<a href="/logout">Logout</a>' : '<a href="/pre_auth/login">Login or Signup</a>' %>
-          <div class='dropdown-top'><p><%= login_link%></p></div>
-        </div>
-    </nav>
-
-    <% if defined? flash %>
-      <% flash.keys.each do |type| %>
-        <p  class="flash-<%= type %>" ><%= flash[type] %></p>
+        <%end%>
       <% end %>
-    <% end %>
+      <div class=row>
+        <nav class="col-sm-12 navbar navbar-expand-lg mb-3  bg-dark navbar-dark">
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
+            <i class="material-icons">menu</i>
+          </button>
+          <div class="collapse navbar-collapse justify-content-center" id="collapsibleNavbar">
+            <ul class="navbar-nav">
+                <li class="nav-item"><a class="nav-link" href="/"><i class="material-icons">home</i></a></li>
+              <%if session['user_id']%>
+                <li class="nav-item"><a class="nav-link" href="/post_auth/party">My Parties</a></li>
+                <li class="nav-item"><a class="nav-link" href="/post_auth/party/new">Schedule a Party</a></li>
+                <li class="nav-item"><a class="nav-link" href="/post_auth/user/me">User Settings</a></li>
+              <%end%>
+              <% if session['admin'] == 'yes' %>
+                <li class="nav-item"><a class="nav-link text-danger" href="/admin/venue">Admin Venues</a></li>
+                <li class="nav-item"><a class="nav-link text-danger" href="/admin/theme">Admin Themes</a></li>
+              <% end %>
+              <li class="nav-item"><a class="nav-link" href="/venue">Venue Locations</a></li>
+              <% login_link = session['user_id'] ? '/logout' : '/pre_auth/login' %>
+              <% login_text = session['user_id'] ? 'Logout' : 'Login or Signup' %>
+              <li class="nav-item"><a class="nav-link" href="<%=login_link%>"><%=login_text%></a></li>
+            </ul>
+          </div>
+        </nav>
+      </div>
 
-    <div class="wrapper">
       <%= yield %>
-    </div>
 
-    <footer class="branding">
-      <small>&copy; 2020 <strong>PartyPlannerSite</strong></small>
-    </footer>
+      <hr>
+      <div class="row mb-3">
+        <div class="col-sm-12 text-center" ><small>&copy; 2020 <strong>PartyPlanner Inc.</strong></small></div>
+      </div>
+    </div>
   </body>
 </html>
