--- a/app/views/party/new_edit.erb
+++ b/app/views/party/new_edit.erb
@@ -1,5 +1,5 @@
 <%if @party.id # party exits%>
-  <%opener = "Edit party #{@party.name} hosted by #{@party.name}."%>
+  <%opener = "Edit party <q>#{@party.name}</q> hosted by #{@party.user.name}."%>
   <%form_action = "/post_auth/party/#{@party.id}"%>
   <%confirm = "Confirm update of Party"%>
 <% else # new %>
@@ -8,74 +8,103 @@
   <%confirm = "Confirm creation of Party"%>
 <%end%>
 
-<main>
-  <h2><%=opener%></h2>
-  <form action="<%=form_action%>" method = 'post' id="new_party">
+<main class="container" >
+  <div class="row mb-3">
+    <div class="col-sm-12">
+      <h3 class="text-center"><%=opener%></h3>
+    </div>
+  </div>
+  <form action="<%=form_action%>" method = 'post' id="new_party" class="was-validated">
     <%if @party.id # 'post' on new and 'patch' on edit%>
       <input type="hidden" name="_method" value="patch">
     <%end%>
-    <label for="name">Party Name:</label><br>
-    <input type="text" id="name" name="name" minlength="5" value="<%=@party.name%>" required><br>
+    <div class="row mb-3">
+      <div class="col-sm-12">
+        <label for="name">Party Name:</label>
+        <input class="form-control" type="text" id="name" name="name" minlength="5" value="<%=@party.name%>" required>
+      </div>
+    </div>
 
-    <label for="venue">Select Venue:</label>
-    <select id="venue" name="venue" form="new_party" required>
-      <option value=""></option> <%# default blank%>
-      <% Venue.all.each do |venue| %>
-        <% if venue.active %>
-          <option value="<%=venue.id%>" <%='selected' if venue == @party.venue %>><%=venue.name%></option>
-        <% end %>
-      <% end %>
-    </select>
-    <br>
+    <div class="row mb-3">
+      <div class="col-sm-6">
+        <label for="venue">Select Venue:</label>
+        <select class="form-control" id="venue" name="venue" form="new_party" required>
+          <option value=""></option> <%# default blank%>
+          <% Venue.all.each do |venue| %>
+            <% if venue.active %>
+              <option value="<%=venue.id%>" <%='selected' if venue == @party.venue %>><%=venue.name%></option>
+            <% end %>
+          <% end %>
+        </select>
+      </div>
+      <div class="col-sm-6">
+        <label for="theme">Select Theme:</label>
+        <select class="form-control" id="theme" name="theme" form="new_party" required>
+          <option value=""></option> <%# default blank%>
+          <% Theme.all.each do |theme| %>
+            <% if theme.active %>
+              <option value="<%=theme.id%>"  <%='selected' if theme == @party.theme %> ><%=theme.name%></option>
+            <% end %>
+          <% end %>
+        </select>
+      </div>
+    </div>
 
-    <label for="theme">Select Theme:</label>
-    <select id="theme" name="theme" form="new_party" required>
-      <option value=""></option> <%# default blank%>
-      <% Theme.all.each do |theme| %>
-        <% if theme.active %>
-          <option value="<%=theme.id%>"  <%='selected' if theme == @party.theme %> ><%=theme.name%></option>
-        <% end %>
-      <% end %>
-    </select>
-    <br>
-
-    <label for="partydate">Party Date:</label>
-    <input type="date" id="partydate" name="partydate" min="<%=min_date%>" max="<%=max_date%>" value="<%=@party.event_date%>" required>
-    <br>
-
-    <label for="time_slot">Choose Time Slots</label>
-    <select id="time_slot" name="time_slot" form="new_party" required>
-      <option value=""></option> <%# default blank%>
-      <option value="1" <%='selected' if 1 == @party.time_slot %>>Morning</option>
-      <option value="2" <%='selected' if 2 == @party.time_slot %>>Afternoon</option>
-      <option value="3" <%='selected' if 3 == @party.time_slot %>>Evening</option>
-      <option value="4" <%='selected' if 4 == @party.time_slot %>>Latenight</option>
-    </select>
-    <br>
-
+    <div class="row mb-3">
+      <div class="col-sm-6">
+        <label for="partydate">Party Date:</label>
+        <input class="form-control" type="date" id="partydate" name="partydate" min="<%=Party.earliest_date%>" max="<%=Party.latest_date%>" value="<%=@party.event_date%>" required>
+      </div>
+      <div class="col-sm-6">
+        <label for="time_slot">Choose Time Slots</label>
+        <select class="form-control" id="time_slot" name="time_slot" form="new_party" required>
+          <option value=""></option> <%# default blank%>
+          <option value="1" <%='selected' if 1 == @party.time_slot %>>Morning</option>
+          <option value="2" <%='selected' if 2 == @party.time_slot %>>Afternoon</option>
+          <option value="3" <%='selected' if 3 == @party.time_slot %>>Evening</option>
+          <option value="4" <%='selected' if 4 == @party.time_slot %>>Latenight</option>
+        </select>
+      </div>
+    </div>
     <%if @party.id # on edit %>
-      <%# checkbox only used on webpage %>
-      <label for="update_check"> <%=confirm%> </label>
-      <input type="checkbox" id="update_check" name="update_check" required ><br>
+      <div class="row mb-3">
+        <div class="col-sm-12">
+        <%# checkbox only used on webpage %>
+          <div class="custom-control custom-switch mb-2">
+            <input type="checkbox" class="custom-control-input" id="_update_check" name="_update_check" required>
+            <label class="custom-control-label" for="_update_check"><%=confirm%></label>
+          </div>
+        </div>
+      </div>
     <%end%>
-    <input type="submit" value="Submit">
-    <input type="reset" value="Reset">
+    <div class="row mb-3">
+      <div class="col-sm-12">
+        <input type="submit" value="Submit">
+        <input type="reset" value="Reset">
+      </div>
+    </div>
   </form>
-
   <% # Delete party only needed for edit %>
   <%if @party.id%>
-    <br>
-    <form action="/post_auth/party/<%=@party.id%>" method = 'post'>
-      <fieldset>
-        <legend>Delete Party:</legend>
-        <input type="hidden" name="_method" value="delete">
-        <%# checkbox only used for conformation on webpage %>
-        <label for="i_am_sure"> Deletion is not reversible: </label>
-        <input type="checkbox" id="i_am_sure" name="i_am_sure" required ><br>
-        <input type="submit" value="Delete party <%=@party.name%>">
-      </fieldset>
-    </form>
-    <br>
+    <hr>
+    <div class="row mb-3">
+      <div class="col-sm-12">
+        <form action="/post_auth/party/<%=@party.id%>" method = 'post'>
+          <fieldset class="border px-4 py-2">
+            <legend class="text-center w-auto">Delete Party:</legend>
+            <input type="hidden" name="_method" value="delete">
+            <%# checkbox only used for conformation on webpage %>
+            <div class="custom-control custom-checkbox mb-4">
+              <input type="checkbox" id="_i_am_sure" name="_i_am_sure" class="custom-control-input" required >
+              <label class="custom-control-label" for="_i_am_sure">Deletion is not reversible</label>
+            </div>
+            <input type="submit" value="Delete party: <%=@party.name%>">
+          </fieldset>
+        </form>
+      </div>
+    </div>
   <%end%>
-  <p><a href="/post_auth/party">Return to Party List</a></p>
+  <div class='row mb-3'>
+    <div class="col-sm-12"><a href="/post_auth/party">Return to Party List</a></div>
+  </div>
 </main>
