--- a/app/views/theme/edit.erb
+++ b/app/views/theme/edit.erb
@@ -1,46 +1,58 @@
-<main>
-  <h2>Theme: <%=@theme.name%></h2>
-  <br>
-  <form action="/admin/theme/<%=@theme.id%>/name" method = 'post'>
-    <fieldset>
-      <legend>Modify Name:</legend>
-      <input type="hidden" name="_method" value="patch">
-      <label for="new_name">New Name:</label><br>
-      <input type="text" id="new_name" name="new_name" title="Enter Theme name here" required><br>
-      <br>
-      <input type="submit" value="Submit">
-      <input type="reset" value="Clear">
-    </fieldset>
-  </form>
+<main class="container">
 
-  <form action="/admin/theme/<%=@theme.id%>/active" method = 'post'>
-    <fieldset>
-      <legend>Modify Active:</legend>
-      <input type="hidden" name="_method" value="patch">
-      <div>
-        <p>Currently set to '<%= @theme.active ? "Active" : "Inactive" %>'</p>
-        <p>Select Below to change:</p>
-        <input type="radio" id="active_yes" name="active" value="yes" required>
-        <label for="active_yes">Active</label><br>
-        <input type="radio" id="active_no" name="active" value="no" required>
-        <label for="active_no">Inactive</label>
-      </div>
-      <br>
-      <input type="submit" value="Submit">
-      <input type="reset" value="Clear">
-    </fieldset>
-  </form>
-  <br>
-  <form action="/admin/theme/<%=@theme.id%>" method = 'post'>
-    <fieldset>
-      <legend>Delete Theme:</legend>
-      <input type="hidden" name="_method" value="delete">
-      <%# checkbox only used for conformation on webpage %>
-      <label for="i_am_sure"> Deletion is not reversible: </label>
-      <input type="checkbox" id="i_am_sure" name="i_am_sure" required ><br>
-      <input type="submit" value="Delete theme <%=@theme.name%>">
-    </fieldset>
-  </form>
-  <br>
-  <a href="/admin/theme">Return to Themes list</a>
+  <div class="row mb-3">
+    <div class="col-sm-12">
+      <h3 class="text-center">Theme: <%=@theme.name%></h3>
+    </div>
+  </div>
+
+  <div class="row mb-3">
+    <div class="col-sm-12">
+      <p class="text-center"><strong>Note: </strong>Making a theme inactive will not remove it from exiting parties</p>
+    </div>
+  </div>
+
+  <div class="row mb-3">
+    <div class="col-sm-12">
+      <form action="/admin/theme/<%=@theme.id%>/name" method = 'post' class="was-validated">
+        <fieldset class="border p-4">
+          <legend class="w-auto">Modify Name:</legend>
+          <div class="mb-3">
+            <input type="hidden" name="_method" value="patch">
+            <label for="new_name">New Name:</label>
+            <input class="form-control" type="text" id="new_name" name="new_name" title="Enter Theme name here" required>
+          </div>
+          <input type="submit" value="Submit">
+          <input type="reset" value="Clear">
+        </fieldset>
+      </form>
+    </div>
+  </div>
+
+  <div class="row mb-3">
+    <div class="col-sm-12">
+      <form action="/admin/theme/<%=@theme.id%>/active" method = 'post' class="was-validated">
+        <fieldset class="border p-4">
+          <legend class="w-auto">Modify Active:</legend>
+          <input type="hidden" name="_method" value="patch">
+          <p>Currently set to '<%= @theme.active ? "Active" : "Inactive" %>'</p>
+          <p>Select Below to change:</p>
+          <div class="custom-control custom-radio mb-1">
+            <input class="custom-control-input" type="radio" id="active_yes" name="active" value="yes" required>
+            <label class="custom-control-label" for="active_yes">Active</label>
+          </div>
+          <div class="custom-control custom-radio mb-3">
+            <input type="radio" class="custom-control-input" id="active_no" name="active" value="no" required>
+            <label class="custom-control-label" for="active_no">Inactive</label>
+          </div>
+          <input type="submit" value="Submit">
+          <input type="reset" value="Clear">
+        </fieldset>
+      </form>
+    </div>
+  </div>
+
+  <div class='row mb-3'>
+    <div class="col-sm-12"><a href="/admin/theme">Return to Themes list</a></div>
+  </div>
 </main>
