--- a/app/views/venue/list.erb
+++ b/app/views/venue/list.erb
@@ -1,20 +1,39 @@
-<main>
-  <h2>Venue Admin Page</h2>
-
-  <p><a href='/admin/venue/new'> Create New Venue </a></p>
-  <br>
-  <table>
-    <tr>
-      <th>Name</th>
-      <th>Status</th>
-      <th>Modify/Delete</th>
-    </tr>
-    <% Venue.all.each do |venue| %>
-      <tr>
-        <td><%=venue.name%></td>
-        <td><%=venue.active ? 'Active' : 'Inactive'%></td>
-        <td><a href="/admin/venue/<%=venue.id%>"> Edit </a></td>
-      </tr>
-    <% end %>
-  </table>
+<main class="container">
+  <div class="row mb-3">
+    <div class="col-sm-12">
+      <h3 class="text-center">Venue Admin Page</h3>
+    </div>
+  </div>
+  <div class="row mb-3">
+    <div class="col-sm-12"><a class="btn btn-primary btn-block text-body" href='/admin/venue/new'><i class="material-icons">add</i> Create New Venue </a></div>
+  </div>
+  <hr>
+  <div class="row mb-3">
+    <div class="col-sm-12">
+      <h3 class="text-center">Venue List</h3>
+    </div>
+  </div>
+  <div class="row mb-3">
+    <div class="col-sm-12">
+      <table class="table table-striped table-hover">
+        <thead>
+          <tr>
+            <th>Name</th>
+            <th>Status</th>
+            <th>Edit</th>
+          </tr>
+        </thead>
+        <tbody>
+          <% Venue.all.each do |venue| %>
+            <%color=venue.active ? 'text-body' : 'text-muted'%>
+            <tr class="<%=color%>">
+              <td><%=venue.name%></td>
+              <td><%=venue.active ? 'Active' : 'Inactive'%></td>
+              <td><a href="/admin/venue/<%=venue.id%>"><i class="material-icons">build</i></a></td>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
+    </div>
+  </div>
 </main>
