fixed some html errors

--- a/app/views/welcome.erb
+++ b/app/views/welcome.erb
@@ -3,7 +3,7 @@
       <h3 class="display-3">Make your next party Magical!</h3>
     </div>
     <article class="row">
-      <p><q>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam commodo.</q><p>
+      <p><q>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam commodo.</q></p>
     </article>
     <article class="row mb-2">
       <div class="col">
