--- a/app/views/user/profile.erb
+++ b/app/views/user/profile.erb
@@ -1,6 +1,6 @@
 <main class="container">
   <div class='row mb-3'>
-    <div class="col-sm-12"><h3 class="display-3 text-center"><strong>Edit User:</strong><%=@user.name%></h3></div>
+    <div class="col-sm-12"><h3 class="display-3 text-center">Edit User: <%=@user.name%></h3></div>
   </div>
 
   <div class="row mb-3">
@@ -24,8 +24,8 @@
         <fieldset class="border p-4">
           <legend class="w-auto mb-n2">Change Password:</legend>
           <input type="hidden" name="_method" value="patch">
-          <label class="mb-3" for="current_password">Current Password:</label><br>
-          <input type="password" class="form-control" id="current_password" name="current_password" minlength="8" required >
+          <label class="mb-3" for="current_password_change">Current Password:</label><br>
+          <input type="password" class="form-control" id="current_password_change" name="current_password" minlength="8" required >
           <label class="my-3" for="new_password">New Password:</label><br>
           <input type="password" class="form-control" id="new_password" name="new_password" minlength="8" required>
           <label class="my-3" for="new_confirm_password">Confirm New Password:</label><br>
@@ -52,8 +52,8 @@
             <input class="custom-control-input" type="radio" id="passwordless_no" name="passwordless" value="no" required>
             <label class="custom-control-label" for="passwordless_no">No</label>
           </div>
-          <label class="mb-3" for="current_password">Current Password:</label>
-          <input class="form-control mb-3" type="password" id="current_password" name="current_password" minlength="8" required>
+          <label class="mb-3" for="current_password_passwordless">Current Password:</label>
+          <input class="form-control" class="mb-3" type="password" id="current_password_passwordless" name="current_password" minlength="8" required>
           <input type="submit" value="Submit">
           <input type="reset" value="Clear">
         </fieldset>
